SERVER-82324 Fix data race when reading/writing the logical session id