src/mongo/db/s/sharding_ddl_util.cpp
@@ -773,10 +773,10 @@ void runTransactionOnShardingCatalog(OperationContext* opCtx,
     }();
 
     if (osi.getSessionId()) {
+        auto lk = stdx::lock_guard(*newOpCtx->getClient());
         newOpCtx->setLogicalSessionId(*osi.getSessionId());
         newOpCtx->setTxnNumber(*osi.getTxnNumber());
     }
-
     newOpCtx->setWriteConcern(writeConcern);
 
     txn_api::SyncTransactionWithRetries txn(newOpCtx,
